[gd_scene load_steps=14 format=2]

[ext_resource path="res://ASSETS/unoup.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/unodown.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Niveles.gd" type="Script" id=3]
[ext_resource path="res://ASSETS/dosdown.png" type="Texture" id=4]
[ext_resource path="res://ASSETS/dosup.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/cuatrodown.png" type="Texture" id=6]
[ext_resource path="res://ASSETS/nivewles.jpg" type="Texture" id=7]
[ext_resource path="res://ASSETS/tresdown.png" type="Texture" id=8]
[ext_resource path="res://ASSETS/cuatroup.png" type="Texture" id=9]
[ext_resource path="res://ASSETS/tresup.png" type="Texture" id=10]
[ext_resource path="res://ASSETS/cincodown.png" type="Texture" id=11]
[ext_resource path="res://ASSETS/cincoup.png" type="Texture" id=12]
[ext_resource path="res://ASSETS/candados.png" type="Texture" id=13]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 522.324, 360.16 )
scale = Vector2( 0.973444, 1.06549 )
texture = ExtResource( 7 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_top = 64.0
margin_right = 300.0
margin_bottom = 364.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_disabled = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 254.112
margin_top = 64.0
margin_right = 554.112
margin_bottom = 364.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_disabled = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 512.0
margin_top = 64.0
margin_right = 812.0
margin_bottom = 364.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton4" type="TextureButton" parent="."]
margin_left = 116.673
margin_top = 320.0
margin_right = 416.673
margin_bottom = 620.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )
texture_disabled = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton5" type="TextureButton" parent="."]
margin_left = 382.112
margin_top = 310.561
margin_right = 682.112
margin_bottom = 610.561
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_disabled = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="button_up" from="TextureButton2" to="." method="_on_TextureButton2_button_up"]
[connection signal="button_up" from="TextureButton3" to="." method="_on_TextureButton3_button_up"]
[connection signal="button_up" from="TextureButton4" to="." method="_on_TextureButton4_button_up"]
[connection signal="button_up" from="TextureButton5" to="." method="_on_TextureButton5_button_up"]
